19_Ingress/19-05_Ingress/wip/kind/foo-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
  # Default port used by the image
  - port: 8080
